# uim-chewing

./: AUTHORS  COPYING  Makefile.am  NEWS  README  configure.ac
pixmaps/: Makefile.am
scm/: Makefile.am  Makefile.in  chewing-custom.scm  chewing-key-custom.scm  chewing.scm
src/: Makefile.am  Makefile.in  chewing.c  keytab.h
